--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>prortfolio project</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d663351c65.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@1,700&family=Inter+Tight:ital,wght@1,300&family=Open+Sans&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -25,7 +26,8 @@
                 <h3>Hi, I am</h3>
                 <h1 class="bannar-sub-title">Mary Hardy</h1>
                 <p class="bannar-descriprion">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments</p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                
             </div>
             <img src="hardy.png" alt="Nice pic">
         </div>
@@ -140,7 +142,7 @@
 
             </div>
             <div class="resume-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
 
@@ -149,7 +151,7 @@
         <section class="contact">
             <div>
                 <h3 class="section-title">Let's Connect</h3>
-                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
                 <a href=""><img src="facebook.png" alt=""></a>
                 <a href=""><img src="twitter.png" alt=""></a>
                 <a href=""><img src="insta.png" alt=""></a>
