last section add and footter

--- a/index.html
+++ b/index.html
@@ -169,6 +169,11 @@
         </section>
 
     </main>
+
+    <section class="view">
+        <h1 class="name">---<span class="color-change">@@</span>Md Shamim Hosan Prodvider<span class="color-change">@@</span>---</h1>
+        <h3 class="use-project">--<span class="color-change">@</span>portfolio Project<span class="color-change">@</span>--</h3>
+    </section>
     
 </body>
 </html>
