--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 
             </div>
-            <img src="hardy.png" alt="Nice pic">
+            <img src="image/hardy.png" alt="Nice pic">
         </div>
     </header>
     <!--the second setion start me and my program deasign-->>
@@ -63,22 +63,22 @@
             <h3 class="section-titles">What I Do</h3>
             <div class="skills-container">
                 <div class="skill">
-                    <img src="js.png" alt="">
+                    <img src="image/js.png" alt="">
                       <p class="skil-title">Vanilla JavaScript</p>
                     <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis cum aperiam, nesciunt ipsa assumenda nobis?</p>
                 </div>
                 <div class="skill">
-                    <img src="react.png" alt="">
+                    <img src="image/react.png" alt="">
                     <p class="skil-title">React</p>
                     <p class="skill-description">Maxime eveniet ipsum optio magnam sapiente nisi pariatur a? Possimus tempora praesentium minima fugiat excepturi.</p>
                 </div>
                 <div class="skill">
-                    <img src="mongo.png" alt="">
+                    <img src="image/mongo.png" alt="">
                     <p class="skil-title">Mongodb</p>
                     <p class="skill-description">Consequatur ex magnam, enim dolorum id expedita voluptates dignissimos dolore soluta rem! Facere, facilis neque?</p>
                 </div>
                 <div class="skill">
-                    <img src="nodejs.png" alt="">
+                    <img src="image/nodejs.png" alt="">
                     <p class="skil-title">Node JS</p>
                     <p class="skill-description">Facilis impedit saepe totam, asperiores recusandae obcaecati eaque laborum, voluptate eos doloribus maxime. Labore, cupiditate!</p>
                 </div>
@@ -152,9 +152,9 @@
             <div>
                 <h3 class="section-title">Let's Connect</h3>
                 <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-                <a href=""><img src="facebook.png" alt=""></a>
-                <a href=""><img src="twitter.png" alt=""></a>
-                <a href=""><img src="insta.png" alt=""></a>
+                <a href=""><img src="image/facebook.png" alt=""></a>
+                <a href=""><img src="image/twitter.png" alt=""></a>
+                <a href=""><img src="image/insta.png" alt=""></a>
                 <a href=""><img src="" alt=""></a>
             </div>
             <div>
@@ -171,8 +171,8 @@
     </main>
 
     <section class="view">
-        <h1 class="name">---<span class="color-change">@@</span>Md Shamim Hosan Prodvider<span class="color-change">@@</span>---</h1>
-        <h3 class="use-project">--<span class="color-change">@</span>portfolio Project<span class="color-change">@</span>--</h3>
+        <h1 class="name">---<span class="color-change">@@</span>Md Shamim Hosan Provider<span class="color-change">@@</span>---</h1>
+        <h3 class="use-project">--<span class="color-change">@</span>Portfolio Project<span class="color-change">@</span>--</h3>
     </section>
     
 </body>
